# social-media-ai

./: .dockerignore  .gitignore  COMMIT_SUMMARY.md  FINAL_SESSION_SUMMARY.md  README.md  alembic.ini  init.sql  pyproject.toml  requirements.txt
app/: main.py
cli/: main.py  scheduler.py
docker/: Dockerfile  docker-compose.yml
docs/: ADMIN_PANEL_SUMMARY.md  ADMIN_UX_IMPROVEMENTS.md  AI_ANALYTICS_ADMIN_GUIDE.md  AI_SERVICES_UPDATE.md  ANALYSIS_SAVE_LOGIC_ISSUES.md  ANALYSIS_TYPES_SCOPE_SYSTEM.md  ANALYTICS_AGGREGATION_SYSTEM.md  ANALYTICS_DATA_STRUCTURE.md  API_REFERENCE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_IMPROVEMENT_ANALYSIS.md  AUTO_JSON_FORMAT.md  BOOLEAN_FIELD_UPDATE.md  BOT_BEHAVIOR.md  BOT_SCENARIO_UX_IMPROVEMENTS.md  CHECKPOINT_SYSTEM.md  CHECK_SOURCE_ACTION.md  CLEANUP_FINAL.md  CLEANUP_SUMMARY.md  COMPLETE_REFACTORING_SUMMARY.md  COMPREHENSIVE_ANALYSIS_AND_IMPROVEMENTS.md  CONTENT_COLLECTION_GUIDE.md  CONTENT_DATES_AND_CHECKPOINT_IMPROVEMENTS.md  CONTENT_TYPES_GUIDE.md  CUSTOM_MEDIA_PROMPTS_IMPLEMENTATION.md  CUSTOM_MEDIA_PROMPTS_PROPOSAL.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_NAVBAR_REDESIGN.md  DOCS_INDEX.md  ENUM_FIX_SUMMARY.md  ENUM_FORM_DISPLAY_FIX.md  ENUM_SELECT_FIX.md  ENUM_VALUE_FIX.md  FINAL_ANALYTICS_FIX_COMPLETE.md  FINAL_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SCOPE_FIX_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  (+44 more)
examples/: checkpoint_usage.py  llm_provider_metadata_usage.py  llm_provider_resolver_demo.py
scripts/: generate_test_analytics.py  run_scheduler.sh  seed_analytics_data.py  seed_data.py  seed_llm_and_scenarios.sql  update_permission_actions.py
tests/: test_admin_queries.py  test_ai_services.py  test_api_monitoring.py  test_base_manager.py  test_bot_scenario_json_parsing.py  test_dashboard_aggregates.py  test_final_summary.py  test_improved_api.py  test_improved_manager.py  test_loader_conflict_fix.py  test_scaffold_form_logic.py  test_scenario_form.py  test_select_difference.py  test_self_reference_fix.py  test_views_refactoring.py  (+1 more)
(+163 files in other folders)
